rex (0.5.99.0) unstable; urgency=low
  * added exclude parameter to sync function
  * version update

 -- Jan Gehring <jan.gehring@gmail.com>  Sun, 29 May 2011 19:00:00 +0200

rex (0.5.0) unstable; urgency=low
  * added file_append function, to append data to a file
  * added functions to manage /etc/hosts entries
  * added user and group management functions
  * added kmod function to load and unload kernel modules
  * version update

 -- Jan Gehring <jan.gehring@gmail.com>  Mon, 16 May 2011 22:00:00 +0200

rex (0.4.3) unstable; urgency=low
  * fixed a bug with the command line parameter "-e"

 -- Jan Gehring <jan.gehring@gmail.com>  Fri, 20 May 2011 08:00:00 +0200


rex (0.4.2) unstable; urgency=low
  * restored compatibility with perl 5.8

 -- Jan Gehring <jan.gehring@gmail.com>  Sun, 15 May 2011 20:00:00 +0200

rex (0.4.1) unstable; urgency=low
  * api documentation
  * fixed cli parameters
  * added some more hardware gather functions

 -- Jan Gehring <jan.gehring@gmail.com>  Fri, 29 Apr 2011 22:00:00 +0200

rex (0.4.0) unstable; urgency=low
  * version update

 -- Jan Gehring <jan.gehring@gmail.com>  Fri, 29 Apr 2011 20:15:00 +0200

rex (0.3.99.5) unstable; urgency=low
  * (upload) if no destination is set, use filename of source.
  * (download) if no destination is set, use filename of source.
  * fixed debug output.
  * added some deprecated log messages
  * preload some Commands (Run, Fs, File, Download, Upload)

 -- Jan Gehring <jan.gehring@gmail.com>  Thu, 26 Apr 2011 13:00:00 +0200

rex (0.3.99.4) unstable; urgency=low
  * fixed user/password auth for changing user credentials
  * use $ENV{"USER"} as default login
  * added no_ssh option
  * added rename function
  * added LOCAL { ... }; block

 -- Jan Gehring <jan.gehring@gmail.com>  Thu, 26 Apr 2011 13:00:00 +0200

rex (0.3.99.3) unstable; urgency=low
  * Build dependencies between tasks
  * Added sysctl command
  * chmod, chgrp and chown for installing a file
  * added database support
